fix: flicker on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,7 @@
 #texture-overlay{
 	position: absolute;
 	inset: 0;
+	z-index: 50;
 	background-size: cover;
 	background-image: url("/img/overlay/overlay_1.jpg");
 
